[package]
name = "hdc302x-async"
version = "0.3.0"
authors = ["Matt Mahin <matt.mahin@gmail.com>"]
repository = "https://github.com/bobsrac/hdc302x-rs"
license = "MIT OR Apache-2.0"
description = "An embedded-hal-async driver for the HDC302x(-Q1) low-power humidity and temperature digital sensor"
readme = "README.md"
keywords = [
  "humidity",
  "temperature",
  "sensor",
  "embedded-hal-driver",
  "hdc3022"
]
categories = [
  "embedded",
  "hardware-support",
  "no-std"
]
homepage = "https://github.com/bobsrac/hdc302x-rs-async"
edition = "2021"

[dependencies]
crc = "3.2.1"
defmt = { version = "0.3.10", optional = true }
embedded-hal-async = "1.0.0"
log = { version = "0.4.22", optional = true }

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]
