[package]
name = "hdc302x"
version = "0.3.0"
authors = ["Matt Mahin <matt.mahin@gmail.com>"]
repository = "https://github.com/bobsrac/hdc302x-rs"
license = "MIT OR Apache-2.0"
description = "An embedded driver for the HDC302x(-Q1) low-power humidity and temperature digital sensor"
readme = "README.md"
keywords = [
  "humidity",
  "temperature",
  "sensor",
  "embedded-hal-driver",
  "hdc3022"
]
categories = [
  "embedded",
  "hardware-support",
  "no-std"
]
homepage = "https://github.com/bobsrac/hdc302x-rs"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
crc = { version = "3.3.0", optional = true }
defmt = { version = "1.0.1", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
log = { version = "0.4.27", optional = true }

[features]
default = ["async", "blocking", "crc"]
async = ["dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
crc = ["dep:crc"]
defmt = ["dep:defmt"]
log = ["dep:log"]
